# DP-Loc_Fed

./: .gitignore  ChangesToNote.txt  PortoToSF_format copy.py  PortoToSF_format.py  README.md  budget.py  cleanNYC.ipynb  create_mapped_data.py  create_mapped_data_Geo.py  create_mapped_data_SF_Porto copy.py  evaluate.py  gen.txt  generator.py  models.py  preproc.py  privacy_accountant.py  pyproject.toml  requirements.txt  run.py  runTRACE.sh  runVAE.sh  serverVT.py  tClient.py  train_step.py  training.py  utils.py  vae_plot.py
Pout/: aux_cell_info_for_preproc-cell_632.pickle  aux_preproc_info-cell_632.pickle  generated_init_data-cell_632-eps_2.00.pickle  nh_train_metrics-cell_632-eps_2.00.pickle  orig_init_data-cell_632.pickle  results-cell_632-eps_2.00.pickle  vae_train_metrics-cell_632-eps_2.00.pickle
Psaved_model/: checkpoint  nh-632-2.00.data-00000-of-00001  nh-632-2.00.index  vae-632-2.00.data-00000-of-00001  vae-632-2.00.index
cfg/: cfg_eps035.json  cfg_eps05.json  cfg_eps1.json  cfg_eps1_sfp.json  cfg_eps2.json  cfg_eps5.json  cfg_eps5_sfp.json  cfg_general copy.json  cfg_general.json  cfg_general_Geo.json  cfg_general_NYC.json  cfg_general_porto.json  cfg_general_porto_dt.json  cfg_general_sf.json
plotting/: plot_density_map_ours.py  plot_results.py  plot_top_k_dropped.py  plot_top_locations.py  stat.py
