[tool.poetry]
name = "dpfed"
version = "0.1.2"
description = "DPFED/DP-loc_NYC"
authors = ["Kyubied6319 <43020429+Kyubied6319@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
flwr = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
